Fixing icon vertical alignment

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -37,6 +37,7 @@ h5
 i
     font-family: Arial, sans-serif
     line-height: 1
+    vertical-align: middle
 
     svg
         height: 1em
